syntax = "proto3";
option java_package = "army.booker.grpc.provides.http.v1.user";
option java_outer_classname = "UserServiceProto";
option go_package = "gen/provides/http";
option optimize_for = SPEED;
import "provides/http/libs/annotations.proto";
import "provides/http/libs/openapi_annotations.proto";
import "provides/http/libs/visibility.proto";

package booker.http.v1.user;


service UserService {
  rpc CreateUser(CreateUserRequest) returns (Empty) {
    option(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Creates a user with valid username and password"
    };
    option(google.api.http) = {
      post: "/api/v1/user"
      body: "*"
    };
  }
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
}

message Empty {}
